base/prometheus/deployment-config.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: prometheus-tpl
  name: prometheus
spec:
  replicas: 1
  selector:
    app: prometheus-tpl
    deploymentconfig: prometheus
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: prometheus-tpl
        deploymentconfig: prometheus
    spec:
      containers:
        - image: docker.io/prom/prometheus
          args:
            - --config.file
            - /etc/prometheus/prometheus.yml
            - --storage.tsdb.path
            - /prometheus/data
          imagePullPolicy: Always
          name: prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /prometheus
              name: prometheus-storage
            - mountPath: /etc/prometheus
              name: prometheus-conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: prometheus-storage
        - configMap:
            defaultMode: 420
            name: prometheus-extra-config
          name: prometheus-conf
  test: false
