base/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-tpl
  name: prometheus
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    deploymentconfig: prometheus
  sessionAffinity: None
  type: ClusterIP
