base/prometheus/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus-tpl
  name: prometheus
spec:
  host:
  port:
    targetPort: http
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
